# pg_custom_plugins

./: .gitignore  CMakeLists.txt  Makefile  README.md
resources/: eyevigis--1.0.sql  eyevigis.control  st_convergence.sql
src/: pg_custom_plugins.c  pg_eyevigis.c
